# avc_2019

./: LICENSE  README.md
avc_bringup/: CMakeLists.txt  package.xml
avc_bringup/config/: bringup.yaml  global.yaml  rosconsole.config
avc_bringup/launch/: bringup.launch  hardware_interface.launch  sensors.launch
avc_control/: CMakeLists.txt  package.xml
avc_control/config/: control.yaml
avc_control/src/: collision_avoidance_node.cpp  control_node.cpp  emergency_stop_node.cpp  manual_control_node.cpp
avc_description/: CMakeLists.txt  package.xml
avc_gazebo/: CMakeLists.txt  package.xml
avc_hardware_interface/: CMakeLists.txt  package.xml
avc_hardware_interface/config/: hardware_interface.yaml
avc_hardware_interface/src/: arduino_output_node.cpp  esc_node.cpp  servo_node.cpp  steering_servo_node.cpp
avc_mapping/: CMakeLists.txt  package.xml
avc_mapping/config/: mapping.yaml
avc_mapping/src/: map_waypoints_node.cpp
avc_msgs/: CMakeLists.txt  package.xml
avc_msgs/msg/: Control.h  Control.msg  ESC.msg  Encoder.msg  Heading.msg  SteeringServo.msg
avc_msgs/srv/: ChangeControlMode.srv
avc_navigation/: CMakeLists.txt  package.xml
avc_navigation/config/: dual_ekf_navsat_example.yaml  navigation.yaml
avc_navigation/include/avc_navigation/: pid_controller.hpp
avc_navigation/launch/: dual_ekf_navsat_example.launch
avc_navigation/src/: navigation_node.cpp  odometry_node.cpp  pid_controller.cpp
avc_sensors/: CMakeLists.txt  README.md  package.xml
avc_sensors/config/: RTIMULib.ini  gps.yaml  sensors.yaml
avc_sensors/include/avc_sensors/: proximity_sensor.hpp
avc_sensors/launch/: gps_setup.launch  sensors.launch
avc_sensors/src/: encoder_node.cpp  encoder_pub_node.cpp  gps_setup_node.cpp  imu_node.cpp  imu_pub_node.cpp  proximity_pub_node.cpp  proximity_sensor.cpp  proximity_sensor_node.cpp
nmea_navsat_driver/launch/: nmea_navsat_driver.launch
